# gemmology-knowledge

./: LICENSE  README.md  mkdocs.yml  pyproject.toml
docs/: glossary.md  index.md  modules.md
docs/learn/: chemical-properties.yaml  crystal-systems.md  crystal-systems.yaml  diamond.yaml  gem-care-durability.yaml  gem-testing-instruments.yaml  grading-valuation.yaml  inclusions.md  inclusions.yaml  index.md  optical-properties.md  optical-properties.yaml  organic-gems.yaml  origin-determination.yaml  phenomenal-gems.yaml  physical-properties.md  physical-properties.yaml  professional-practice.yaml  synthetics.md  synthetics.yaml  treatments.md  treatments.yaml
docs/learn/care/: gem-care-durability.yaml
docs/learn/equipment/: dichroscope.yaml  index.yaml  microscope.yaml  other-tools.yaml  overview.yaml  polariscope.yaml  refractometer.yaml  spectroscope.yaml  uv-lamp.yaml
docs/learn/fundamentals/: chemical-properties.yaml  crystal-systems.yaml  crystallography-advanced.yaml  optical-properties-advanced.yaml  optical-properties.yaml  physical-properties.yaml
docs/learn/identification/: composite-stones.yaml  inclusions.yaml  synthetics.yaml  treatments.yaml
docs/learn/market/: disclosure.yaml  grading-valuation.yaml  lab-reports.yaml  professional-practice.yaml
docs/learn/origin/: australia.yaml  brazil.yaml  burma.yaml  ceylon.yaml  colombia.yaml  east-africa.yaml  index.yaml  kashmir.yaml  madagascar.yaml  overview.yaml  zambia.yaml
docs/learn/phenomena/: index.yaml  (+9 more)
docs/quick-reference/: index.md
docs/study-guides/: fga-diploma.md  fga-foundation.md
(+55 files in other folders)
