[project]
name = "gemmology-knowledge"
version = "1.0.0"
description = "FGA curriculum documentation and study materials for gemmology"
readme = "README.md"
license = { text = "CC-BY-SA-4.0" }
requires-python = ">=3.10"
authors = [
    { name = "Fabian Schuh", email = "fabian@gemmology.dev" }
]
keywords = [
    "gemmology",
    "gemstones",
    "documentation",
    "education",
    "fga",
    "curriculum"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Education",
    "License :: OSI Approved :: Creative Commons Attribution Share Alike 4.0 International",
    "Topic :: Documentation",
    "Topic :: Scientific/Engineering"
]
dependencies = []

[project.urls]
Homepage = "https://knowledge.gemmology.dev"
Documentation = "https://knowledge.gemmology.dev"
Repository = "https://github.com/gemmology-dev/gemmology-knowledge"
Issues = "https://github.com/gemmology-dev/gemmology-knowledge/issues"

[project.optional-dependencies]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
